--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vue-axios",
-  "version": "2.1.4",
+  "name": "vve-vue-axios",
+  "version": "1.0.0",
   "description": "A small wrapper for integrating axios to Vuejs",
-  "main": "dist/vue-axios.min.js",
+  "main": "dist/vve-vue-axios.min.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "build": "gulp"
   },
   "typing": "index.d.ts",
   "files": [
@@ -15,24 +16,24 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/imcvampire/vue-axios.git"
+    "url": "git+https://github.com/vue-viewer-editor/vve-vue-axios.git"
   },
   "keywords": [
     "vue",
     "axios",
     "wrapper"
   ],
-  "author": "Nguyen Quoc Anh (imcvampire)",
+  "author": "nianqin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/imcvampire/vue-axios/issues"
+    "url": "https://github.com/vue-viewer-editor/vve-vue-axios/issues"
   },
-  "homepage": "https://github.com/imcvampire/vue-axios#readme",
+  "homepage": "https://github.com/vue-viewer-editor/vve-vue-axios#readme",
   "devDependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.19.0",
     "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglifyjs": "^0.6.2",
