--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/vve-vue-axios.min.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "npm run test",
+    "test": "echo test",
     "build": "gulp",
     "release": "git commit -am %npm_package_version% && git tag v%npm_package_version% && git push && git push --tags && echo 'i Run `npm publish` to publish'"
   },
