--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.4.0",
     "gulp-uglifyjs": "^0.6.2",
+    "lodash.template": "^4.5.0",
     "vue": "^2.6.10"
   },
   "peerDependencies": {
